# video-deid

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  duration-check.py  generate_keypoints_csv.py  generate_keypoints_dataframe.py  pose-detection.py  pyproject.toml  requirements.txt  run_yolo8.sh  setup.py  utils.py  video-deid.py  video_blur.py  video_deid.py  video_pipeline.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
helpers/: audio.py  complete_deid.py  deid.py  extract_keypoints.py  generate_keypoints_dataframe.py  pose_detection.py  utils.py  video_blur.py
scripts/: extract_keypoints_array.sh  video_deid_array.sh  video_deid_single.sh
src/: README.md
src/video_deid/: __init__.py  audio.py  cli.py  config.py
src/video_deid/blur/: __init__.py  core.py  processing.py  techniques.py  tracking.py
src/video_deid/databricks/: __init__.py  extract.py  runner.py  utils.py
src/video_deid/deid/: __init__.py  complete.py
src/video_deid/keypoints/: __init__.py  extraction.py
src/video_deid/utils/: __init__.py  file_utils.py  keypoint_utils.py  progress.py  time_utils.py
